--- a/404.html
+++ b/404.html
@@ -41,7 +41,8 @@
   <center><a href="./mobileindex.html"><img src="./wave_dev.PNG" width="70mm"></a></center>
 </div>
 <body>
-  <p style="text-align: center; color: #cecece;" class="pn_l">Uh oh! We can't find this page!</p>
+  <p style="text-align: center; color: #cecece;" class="pn_l">Uh oh! The tide went out!</p>
+  <p style="text-align: center; color: #cecece;" class="pn_l">This page is either unavailable or missing.</p>
 
 </body>
 <footer>
