--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>About</title>
-<meta name="Description" content="Wave Digital Ministries developer site">
+<meta name="Description" content="Wave Digital Ministries - ABout">
 <meta name="keywords" content="Christian, ministry, Christian ministry, developer">
 <html lang="en">
 <link rel="shortcut icon" href="./wave.PNG">
@@ -43,7 +43,7 @@
   <p style="padding:55mm;"></p>
   <div style="background-color: #D2DADD;">
 <p style="text-align: center; padding-top:1mm;" class="pn_l">About</p>
-<p style="text-align: center; padding-top:1mm;" class="pn_m">We are dedicated to provided excellent resources for ministries and individuals.</p>
+<p style="text-align: center; padding-top:1mm;" class="pn_m">We are dedicated to providing excellent resources for ministries and individuals.</p>
 <p style="padding:2mm;"></p>
 </div></div>
 </center>
