--- a/account.html
+++ b/account.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Member</title>
-<meta name="Description" content="WDM Dev Download">
+<meta name="Description" content="WDM Account">
 <meta name="keywords" content="Christian, ministry, Christian ministry, developer">
 <html lang="en">
 <link rel="shortcut icon" href="./wave.PNG">
