--- a/mobileindex.html
+++ b/mobileindex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Home</title>
-<meta name="Description" content="Wave Digital Ministries developer site">
+<meta name="Description" content="Wave Digital Ministries Home">
 <meta name="keywords" content="Christian, ministry, Christian ministry, developer">
 <html lang="en">
 <link rel="shortcut icon" href="./wave.PNG">
@@ -64,12 +64,20 @@
 <p style="text-align: center;"><a href="https://www.ripple-wdm.net/Ghome.html" target="_blank"><button class="menuButtons">Check them out!</button></a></p>
 <p style="padding:2mm;"></p>
 </div></div>
+<p style="margin: 25mm;"></p>
+<div class="con12">
+  <p style="padding:0mm;"></p>
+  <div style="background-color: #D2DADD;">
+<p style="text-align: center; padding-top:1mm;" class="pn_l">We have a Ministry Search Engine!</p>
+<p style="text-align: center;"><a href="./mobilesearch.html"><button class="menuButtons">Let's see it!</button></a></p>
+<p style="padding:2mm;"></p>
+</div></div>
 </center>
 </body>
 
 <footer>
 <center>
-    <!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a><a href="#"><button class="menuButtons2">Community</button></a>--><a href="./contact.html"><button class="menuButtons2">Contact Us</button></a><a href="./about.html"><button class="menuButtons2">About</button></a><a href="./privacy.html"><button class="menuButtons2">Privacy</button></a>
+    <!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a><a href="#"><button class="menuButtons2">Community</button></a>--><a href="./contact.html"><button class="menuButtons2">Contact Us</button></a><a href="./mobileabout.html"><button class="menuButtons2">About</button></a><a href="./privacy.html"><button class="menuButtons2">Privacy</button></a>
 
   <div style=" margin-top: 5mm;">
     <a style="margin-right: 2mm;" href="https://www.facebook.com/Wave-Digital-Ministries-102990284411843/?modal=admin_todo_tour" target="_blank"><img src="./icons/Facebook.png" alt="Facebook Button" width="70px"></a><a style="margin-left: 2mm;" href="https://twitter.com/ministries_wave" target="_blank"><img src="./icons/Twitter.png" alt="Twitter Button" width="70px"></a>
