--- a/mobilesearch.html
+++ b/mobilesearch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Contact</title>
-<meta name="Description" content="Wave Digital Ministries Contact">
+<title>Home</title>
+<meta name="Description" content="WDM Ministry Index">
 <meta name="keywords" content="Christian, ministry, Christian ministry, developer">
 <html lang="en">
 <link rel="shortcut icon" href="./wave.PNG">
@@ -41,16 +41,21 @@
   <center><a href="./mobileindex.html"><img src="./wave.PNG" width="70mm"></a></center>
 </div>
 <body>
-  <p style="text-align: center; color: #cecece;" class="pn_l">Contact us!</p>
-  <div>
+  <p style="text-align: center;color: #1a1a1a;" class="pn_l_u">Find the right ministry for you.</p>
+  <p style="text-align: center;color: #1a1a1a;" class="pn_m">This index is still being built!</p>
+  <!--<p style="text-align: center;color: #1a1a1a;" class="pn_m">Request indexing <span><a href="./request.html" id="fa">here</a></span>.</p>-->
+  <p style="text-align: center;color: #1a1a1a;" class="pn_s">Version alpha 1.1CSE</p>
   <center>
-  <iframe src="https://share.hsforms.com/1pqjtld0QRC6lWrVDVTTrMg3s5d8" width="50%" height="600mm" frameborder="0" marginheight="0" marginwidth="0"  style="border-radius: 5mm;">Loading…</iframe>
+    <div style="background-color: #D2DADD; padding: 1mm; border-radius: 1mm; width: 90%">
+    <script async src="https://cse.google.com/cse.js?cx=005791069799831781073:yprddxbwax9"></script>
+    <div class="gcse-search"></div>
+  </div>
   </center>
-</div>
 </body>
+
 <footer>
 <center>
-    <!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a><a href="#"><button class="menuButtons2">Community</button></a>--><a href="./contact.html"><button class="menuButtons2">Contact Us</button></a><a href="./mobileabout.html"><button class="menuButtons2">About</button></a><a href="./privacy.html"><button class="menuButtons2">Privacy</button></a>
+    <!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a><a href="#"><button class="menuButtons2">Community</button></a>--><a href="./contact.html"><button class="menuButtons2">Contact Us</button></a><a href="./about.html"><button class="menuButtons2">About</button></a><a href="./privacy.html"><button class="menuButtons2">Privacy</button></a>
 
   <div style=" margin-top: 5mm;">
     <a style="margin-right: 2mm;" href="https://www.facebook.com/Wave-Digital-Ministries-102990284411843/?modal=admin_todo_tour" target="_blank"><img src="./icons/Facebook.png" alt="Facebook Button" width="70px"></a><a style="margin-left: 2mm;" href="https://twitter.com/ministries_wave" target="_blank"><img src="./icons/Twitter.png" alt="Twitter Button" width="70px"></a>
