--- a/mobileaccount.html
+++ b/mobileaccount.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Member</title>
-<meta name="Description" content="Wave Digital Ministries developer site">
+<meta name="Description" content="Wave Digital Ministries - Accounts">
 <meta name="keywords" content="Christian, ministry, Christian ministry, developer">
 <html lang="en">
 <link rel="shortcut icon" href="./wave.PNG">
@@ -54,7 +54,7 @@
 </body>
 <footer>
 <center>
-    <!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a><a href="#"><button class="menuButtons2">Community</button></a>--><a href="./contact.html"><button class="menuButtons2">Contact Us</button></a><a href="./about.html"><button class="menuButtons2">About</button></a><a href="./privacy.html"><button class="menuButtons2">Privacy</button></a>
+    <!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a><a href="#"><button class="menuButtons2">Community</button></a>--><a href="./contact.html"><button class="menuButtons2">Contact Us</button></a><a href="./mobileabout.html"><button class="menuButtons2">About</button></a><a href="./privacy.html"><button class="menuButtons2">Privacy</button></a>
 
   <div style=" margin-top: 5mm;">
     <a style="margin-right: 2mm;" href="https://www.facebook.com/Wave-Digital-Ministries-102990284411843/?modal=admin_todo_tour" target="_blank"><img src="./icons/Facebook.png" alt="Facebook Button" width="70px"></a><a style="margin-left: 2mm;" href="https://twitter.com/ministries_wave" target="_blank"><img src="./icons/Twitter.png" alt="Twitter Button" width="70px"></a>
