--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="con10">
   <p style="padding:55mm;"></p>
   <div style="background-color: #D2DADD;">
-    <p style="text-align: center; padding-top:1mm;" class="pn_l">Please select a device type before continuing.</p>
+    <p style="text-align: center; padding-top:1mm;" class="pn_l">Please select a device type.</p>
 <p style="text-align: center; padding-top:1mm;" class="pn_l"><a href="./index1.html"><button class="menuButtons2">Desktop</button></a><a href="./mobileindex.html"><button class="menuButtons2">Mobile</button></a></p>
 <p style="padding:2mm;"></p>
 </div></div>
