--- a/404.html
+++ b/404.html
@@ -46,11 +46,10 @@
 
 </body>
 <footer>
-<center>
-    <a href="https://www.ripple-wdm.net/indResources.html"><button class="menuButtons2">Individual Resources</button></a><a href="https://www.ripple-wdm.net/grResources.html"><button class="menuButtons2">Group Resources</button></a><a href="https://www.ripple-wdm.net/mResources.html"><button class="menuButtons2">Ministry Resources</button></a><a href="https://www.wavedm.net/"><button class="menuButtons2">About</button></a><a href="https://www.wavedm.net/privacy"><button class="menuButtons2">Privacy</button></a>
+  <center>
 
   <div style=" margin-top: 5mm;">
-    <a style="margin-right: 2mm;" href="https://www.facebook.com/Wave-Digital-Ministries-102990284411843/?modal=admin_todo_tour" target="_blank"><img src="./icons/Facebook.png" alt="Facebook Button" width="70px"></a><a style="margin-left: 2mm;" href="https://twitter.com/ministries_wave" target="_blank"><img src="./icons/Twitter.png" alt="Twitter Button" width="70px"></a>
+    <a style="margin-right: 2mm;" href="https://www.facebook.com/Wave-Digital-Ministries-102990284411843/?modal=admin_todo_tour" target="_blank"><img src="./icons/Facebook.png" alt="Facebook Button" width="70px"></a><a href="https://faithlife.com/wave-digital-ministries-network/" target="_blank"><img src="./icons/FaithLife.png" alt="FaithLife Button" width="70px"></a><a style="margin-left: 2mm;" href="https://twitter.com/ministries_wave" target="_blank"><img src="./icons/Twitter.png" alt="Twitter Button" width="70px"></a>
   </div>
 </center>
 </footer>
