Added Subsciption option

--- a/subscribe.html
+++ b/subscribe.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Contact</title>
+<title>Subscribe</title>
 <meta name="Description" content="Wave Digital Ministries Contact">
 <meta name="keywords" content="Christian, ministry, Christian ministry, developer">
 <html lang="en">
@@ -41,16 +41,16 @@
   <center><a href="./mobileindex.html"><img src="./wave.PNG" width="70mm"></a></center>
 </div>
 <body>
-  <p style="text-align: center; color: #cecece;" class="pn_l">Contact us!</p>
+  <p style="text-align: center; color: #cecece;" class="pn_l">News Letter Subscription</p>
   <div>
   <center>
-  <iframe src="https://share.hsforms.com/1pqjtld0QRC6lWrVDVTTrMg3s5d8" width="50%" height="600mm" frameborder="0" marginheight="0" marginwidth="0"  style="border-radius: 5mm;">Loading…</iframe>
+  <iframe src="https://share.hsforms.com/1E7MDVBBnS3Cko-10Yix0og3s5d8" width="95%" height="600mm" frameborder="0" marginheight="0" marginwidth="0"  style="border-radius: 5mm;">Loading…</iframe>
   </center>
 </div>
 </body>
 <footer>
 <center>
-    <!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a><a href="#"><button class="menuButtons2">Community</button></a>--><a href="./contact.html"><button class="menuButtons2">Contact Us</button></a><a href="./about.html"><button class="menuButtons2">About</button></a><a href="./subscribe.html" target="_blank"><button class="menuButtons2">Subscribe</button></a><a href="./privacy.html"><button class="menuButtons2">Privacy</button></a>
+    <!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a><a href="#"><button class="menuButtons2">Community</button></a>--><a href="./contact.html"><button class="menuButtons2">Contact Us</button></a><a href="./about.html"><button class="menuButtons2">About</button></a><a href="./subscribe.html"><button class="menuButtons2">Subscribe</button></a><a href="./privacy.html"><button class="menuButtons2">Privacy</button></a>
 
     <div style=" margin-top: 5mm;">
       <a style="margin-right: 2mm;" href="https://www.facebook.com/Wave-Digital-Ministries-102990284411843/?modal=admin_todo_tour" target="_blank"><img src="./icons/Facebook.png" alt="Facebook Button" width="70px"></a><a href="https://faithlife.com/wave-digital-ministries-network/" target="_blank"><img src="./icons/FaithLife.png" alt="FaithLife Button" width="70px"></a><a style="margin-left: 2mm;" href="https://twitter.com/ministries_wave" target="_blank"><img src="./icons/Twitter.png" alt="Twitter Button" width="70px"></a>
