--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 </div>
 <div style="padding-top: 10mm" class="menuWDM">
   <center>
-<p><span><!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a>--><a href="./account.html"><button class="menuButtons2">Community</button></a><!--<a href="#"><button class="menuButtons2">Partners</button></a>--><a href="./contact.html"><button class="menuButtons2">Contact Us</button></a><a href="https://dev.wavedm.net/"><button class="menuButtons2">Developers</button></a><a href="./privacy.html" target="_blank"><button class="menuButtons2">Privacy</button></a></span></p>
+<p><span><!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a>--><a href="./account.html"><button class="menuButtons2">Community</button></a><!--<a href="#"><button class="menuButtons2">Partners</button></a>--><a href="./contact.html"><button class="menuButtons2">Contact Us</button></a><a href="./subscribe.html" target="_blank"><button class="menuButtons2">Subscribe</button></a><a href="https://dev.wavedm.net/"><button class="menuButtons2">Developers</button></a><a href="./privacy.html" target="_blank"><button class="menuButtons2">Privacy</button></a></span></p>
   </center>
 </div>
 </header>
