--- a/ministry_indexCSE.html
+++ b/ministry_indexCSE.html
@@ -51,9 +51,9 @@
 <footer>
   <center>
 
-  <div style=" margin-top: 5mm;">
-    <a style="margin-right: 2mm;" href="https://faithlife.com/wave-digital-ministries-network/" target="_blank"><img src="./icons/FaithLife.png" alt="Facebook Button" width="70px"></a><a href="https://www.instagram.com/wavedigitalministries/" target="_blank"><img src="./icons/instagram.png" alt="FaithLife Button" width="70px"></a><a style="margin-left: 2mm;" href="https://twitter.com/ministries_wave" target="_blank"><img src="./icons/Twitter.png" alt="Twitter Button" width="70px"></a>
-  </div>
+    <div style=" margin-top: 5mm;">
+      <a style="margin-right: 2mm;" href="https://faithlife.com/wave-digital-ministries-network/" target="_blank"><img src="./icons/FaithLife.png" alt="FaithLife Button" width="70px"></a><a href="https://www.instagram.com/wavedigitalministries/" target="_blank"><img src="./icons/instagram.png" alt="instagram Button" width="70px"></a><a style="margin-left: 2mm;" href="https://twitter.com/ministries_wave" target="_blank"><img src="./icons/TwitterButton.png" alt="Twitter Button" width="70px"></a>
+    </div>
   <!--https://www.facebook.com/Wave-Digital-Ministries-102990284411843/?modal=admin_todo_tour-->
 </center>
 </footer>
