--- a/index1.html
+++ b/index1.html
@@ -58,7 +58,7 @@
   <p style="padding:55mm;"></p>
   <div style="background-color: #D2DADD;">
 <p style="text-align: center; padding-top:1mm;" class="pn_l">We are developing online courses.</p>
-<p style="text-align: center;"><a href="https://courses.wavedm.net/"><button class="menuButtons">Check them out!</button></a></p>
+<p style="text-align: center;"><a href="https://courses.wavedm.net/index1.html"><button class="menuButtons">Check them out!</button></a></p>
 <p style="padding:2mm;"></p>
 </div></div>
 </center>
