--- a/mobileindex.html
+++ b/mobileindex.html
@@ -61,7 +61,7 @@
   <p style="padding:0mm;"></p>
   <div style="background-color: #D2DADD;">
 <p style="text-align: center; padding-top:1mm;" class="pn_l">We are developing online courses.</p>
-<p style="text-align: center;"><a href="http://courses.wavedm.net/"><button class="menuButtons">Check them out!</button></a></p>
+<p style="text-align: center;"><a href="https://courses.wavedm.net/mobileindex.html"><button class="menuButtons">Check them out!</button></a></p>
 <p style="padding:2mm;"></p>
 </div></div>
 <p style="margin: 25mm;"></p>
