--- a/privacy.html
+++ b/privacy.html
@@ -57,7 +57,9 @@
   <p style="text-align: center; padding-top:1mm;" class="pn_m">We prohibit the use of profane language, adult content, bullying, and using God's name as a curse word.</p>
   <p style="text-align: center; padding-top:1mm;" class="pn_m">Images that contain children are NOT permitted. This is to protect their identities.</p>
   <p style="padding:2mm;"></p>
-  <p style="text-align: center; padding-top:1mm;" class="pn_m">Violation of any of these terms or laws will result in termination of your account.</p>
+  <p style="text-align: center; padding-top:1mm;" class="pn_l">Violation of any of these terms or laws will result in termination of your account.</p>
+  <p style="padding:2mm;"></p>
+  <p style="text-align: center; padding-top:1mm;" class="pn_m">By making an account with us you give us permission to process your data and contact you.</p>
   </div></div>
 </center>
 </body>
