updated partner info

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <footer>
 <center>
-
+<p style="text-align: center; padding-top:1mm;" class="pn_l"><a href="./partners.html" target="_blank"><button class="menuButtons2">Partners</button></a></p>
 
   <div style=" margin-top: 5mm;">
     <a style="margin-right: 2mm;" href="https://faithlife.com/wave-digital-ministries-network/" target="_blank"><img src="./icons/FaithLife.png" alt="FaithLife Button" width="70px"></a><a href="https://www.instagram.com/wavedigitalministries/" target="_blank"><img src="./icons/instagram.png" alt="instagram Button" width="70px"></a><a style="margin-left: 2mm;" href="https://twitter.com/ministries_wave" target="_blank"><img src="./icons/TwitterButton.png" alt="Twitter Button" width="70px"></a>
