contact and privacy update

--- a/partners.html
+++ b/partners.html
@@ -48,7 +48,7 @@
   <div>
 
 </div>
-<p style="text-align: center; color: #cecece;" class="pn_m">Become a <span><a href="./partnership.html">partner!</a></span></p><h1 hidden>Become a partner!</h1>
+<p style="text-align: center; color: #cecece;" class="pn_m">Become a <span><a href="https://wavedm.churchcenter.com/people/forms/76550">partner!</a></span></p><h1 hidden>Become a partner!</h1>
 </body>
 <footer>
 <center>
