--- a/privacy.html
+++ b/privacy.html
@@ -46,7 +46,7 @@
   <div class="con11">
     <p style="padding:0mm;"></p>
     <div style="background-color: #D2DADD;">
-  <p style="text-align: center; padding-top:1mm;" class="pn_m">This website uses trackers and cookies. These are for analytical purposes. *Wave Digital Ministries does not share this data. We use Wix for member management. We also use Church Metrics for analytic visualization. We use HubSpot for CRM, email management, forms, and marketing. The data collected/stored will never be shared outside of Wave Digital Ministries. </p>
+  <p style="text-align: center; padding-top:1mm;" class="pn_m">This website uses trackers and cookies. These are for analytical purposes. *Wave Digital Ministries does not share this data. We use Wix for member management. We also use Church Metrics for analytic visualization. We use Planning Center People for CRM and forms. We keep all data private. </p>
   <p style="padding:2mm;"></p>
   </div></div>
   <p style="padding:8mm;"></p>
@@ -65,7 +65,7 @@
 </body>
 <footer>
 <center>
-    <!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a><a href="#"><button class="menuButtons2">Community</button></a>--><a href="./mobilecontact.html"><button class="menuButtons2">Contact Us</button></a><a href="./mobileabout.html"><button class="menuButtons2">About</button></a><a href="./subscribe.html" target="_blank"><button class="menuButtons2">Subscribe</button></a><a href="./privacy.html"><button class="menuButtons2">Privacy</button></a>
+    <!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a><a href="#"><button class="menuButtons2">Community</button></a>--><a href="https://wavedm.churchcenter.com/people/forms/76551" target="_blank"><button class="menuButtons2">Contact Us</button></a><a href="./mobileabout.html"><button class="menuButtons2">About</button></a><a href="./subscribe.html" target="_blank"><button class="menuButtons2">Subscribe</button></a><a href="./privacy.html"><button class="menuButtons2">Privacy</button></a>
 
     <div style=" margin-top: 5mm;">
       <a style="margin-right: 2mm;" href="https://faithlife.com/wave-digital-ministries-network/" target="_blank"><img src="./icons/FaithLife.png" alt="FaithLife Button" width="70px"></a><a href="https://www.instagram.com/wavedigitalministries/" target="_blank"><img src="./icons/instagram.png" alt="instagram Button" width="70px"></a><a style="margin-left: 2mm;" href="https://twitter.com/ministries_wave" target="_blank"><img src="./icons/TwitterButton.png" alt="Twitter Button" width="70px"></a>
