--- a/subscribe.html
+++ b/subscribe.html
@@ -44,7 +44,7 @@
   <p style="text-align: center; color: #cecece;" class="pn_l">News Letter Subscription</p>
   <div>
   <center>
-  <iframe src="https://share.hsforms.com/1E7MDVBBnS3Cko-10Yix0og3s5d8" width="95%" height="600mm" frameborder="0" marginheight="0" marginwidth="0"  style="border-radius: 5mm;">Loading…</iframe>
+  <iframe src="https://wavedm.churchcenter.com/people/forms/76556" width="95%" height="600mm" frameborder="0" marginheight="0" marginwidth="0"  style="border-radius: 5mm;">Loading…</iframe>
   </center>
 </div>
 </body>
