--- a/mobileindex.html
+++ b/mobileindex.html
@@ -49,6 +49,14 @@
 <p style="padding:2mm;"></p>
 </div></div>
 <p style="margin: 25mm;"></p>
+<div class="con13">
+  <p style="padding:0mm;"></p>
+  <div style="background-color: #D2DADD;">
+<p style="text-align: center; padding-top:1mm;" class="pn_l">Connect with us on all of the major networks and more!</p>
+<p style="text-align: center;"><a href="./social.html" target="_blank"><button class="menuButtons">Take me to them!</button></a></p>
+<p style="padding:2mm;"></p>
+</div></div>
+<p style="margin: 25mm;"></p>
 <div class="con11">
   <p style="padding:0mm;"></p>
   <div style="background-color: #D2DADD;">
