--- a/index1.html
+++ b/index1.html
@@ -54,21 +54,21 @@
 <p style="padding:2mm;"></p>
 </div></div>
 <p style="margin: 25mm;"></p>
-<div class="con11">
-  <p style="padding:75mm;"></p>
+<div class="con10">
+  <p style="padding:0mm;"></p>
   <div style="background-color: #D2DADD;">
-    <p style="text-align: center; padding-top:1mm;" class="pn_l">You can now make an account with WDM!</p>
-    <p style="text-align: center;"><a href="./account.html"><button class="menuButtons">Let's do that!</button></a></p>
-<p style="padding:2mm;"></p>
+    <iframe style="margin: 5mm" width="95%" height="600mm" src="https://www.youtube-nocookie.com/embed/h-i9YI7y9mQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div></div>
+
 <p style="margin: 25mm;"></p>
-<div class="con12">
+<div class="con11">
   <p style="padding:55mm;"></p>
   <div style="background-color: #D2DADD;">
 <p style="text-align: center; padding-top:1mm;" class="pn_l">We are developing online courses.</p>
 <p style="text-align: center;"><a href="https://courses.wavedm.net/index1.html"><button class="menuButtons">Check them out!</button></a></p>
 <p style="padding:2mm;"></p>
 </div></div>
+
 </center>
 </body>
 
