--- a/about.html
+++ b/about.html
@@ -40,10 +40,14 @@
 <body>
 <center>
 <div class="con9">
-  <p style="padding:55mm;"></p>
+  <p style="padding:55mm; margin-bottom:10mm; background-position: center; background-size: cover;"></p>
   <div style="background-color: #D2DADD;">
 <p style="text-align: center; padding-top:1mm;" class="pn_l">About</p>
-<p style="text-align: center; padding-top:1mm;" class="pn_m">We are dedicated to providing excellent resources for ministries and individuals.</p>
+<p style="text-align: center; padding-top:1mm;" class="pn_m">Wave Digital Ministries Network provides resources for non-believers, believers, and ministries!</p>
+<p style="padding:2mm;"></p>
+<p style="text-align: center; padding-top:1mm;" class="pn_m">Our current resources include Courses and Ministry Search.</p>
+<p style="text-align: center; padding-top:1mm;" class="pn_m"><a id="a1" href="https://courses.wavedm.net/">Courses:</a>     Free lessons and sermons for anyone.</p>
+<p style="text-align: center; padding-top:1mm;" class="pn_m"><a id="a1" href="https://www.wavedm.net/ministry_indexCSE.html">Ministry Search:</a>     A search engine with the purpose of connecting people with ministries.</p>
 <p style="padding:2mm;"></p>
 </div></div>
 </center>
