--- a/mobileindex.html
+++ b/mobileindex.html
@@ -43,33 +43,26 @@
 <body>
 <center>
 <div class="con10">
-  <p style="padding:0mm;"></p>
+  <p style="padding:25mm;"></p>
   <div style="background-color: #D2DADD;">
 <p style="text-align: center; padding-top:1mm;" class="pn_l">We are developing ministry technologies.</p>
 <p style="padding:2mm;"></p>
 </div></div>
 <p style="margin: 25mm;"></p>
 <div class="con13">
-  <p style="padding:0mm;"></p>
+  <p style="padding:25mm;"></p>
   <div style="background-color: #D2DADD;">
 <p style="text-align: center; padding-top:1mm;" class="pn_l">Connect with us on all of the major networks and more!</p>
 <p style="text-align: center;"><a href="./social.html" target="_blank"><button class="menuButtons">Take me to them!</button></a></p>
 <p style="padding:2mm;"></p>
 </div></div>
+
 <p style="margin: 25mm;"></p>
-<div class="con11">
-  <p style="padding:0mm;"></p>
+<div class="con14">
+  <p style="padding:25mm;"></p>
   <div style="background-color: #D2DADD;">
-<p style="text-align: center; padding-top:1mm;" class="pn_l">You can now make an account with WDM!</p>
-<p style="text-align: center;"><a href="./mobileaccount.html"><button class="menuButtons">Let's do that!</button></a></p>
-<p style="padding:2mm;"></p>
-</div></div>
-<p style="margin: 25mm;"></p>
-<div class="con12">
-  <p style="padding:0mm;"></p>
-  <div style="background-color: #D2DADD;">
-<p style="text-align: center; padding-top:1mm;" class="pn_l">We are developing online courses.</p>
-<p style="text-align: center;"><a href="https://courses.wavedm.net/mobileindex.html"><button class="menuButtons">Check them out!</button></a></p>
+<p style="text-align: center; padding-top:1mm;" class="pn_l">We ahave online lessons and fun facts!</p>
+<p style="text-align: center;"><a href="https://courses.wavedm.net/index1.html"><button class="menuButtons">Let's check them out!</button></a></p>
 <p style="padding:2mm;"></p>
 </div></div>
 <p style="margin: 25mm;"></p>
