spelling error corrected

--- a/mobileindex.html
+++ b/mobileindex.html
@@ -61,7 +61,7 @@
 <div class="con14">
   <p style="padding:25mm;"></p>
   <div style="background-color: #D2DADD;">
-<p style="text-align: center; padding-top:1mm;" class="pn_l">We ahave online lessons and fun facts!</p>
+<p style="text-align: center; padding-top:1mm;" class="pn_l">We have online lessons and fun facts!</p>
 <p style="text-align: center;"><a href="https://courses.wavedm.net/index1.html"><button class="menuButtons">Let's check them out!</button></a></p>
 <p style="padding:2mm;"></p>
 </div></div>
