--- a/mobileindex.html
+++ b/mobileindex.html
@@ -62,7 +62,7 @@
   <p style="padding:25mm;"></p>
   <div style="background-color: #D2DADD;">
 <p style="text-align: center; padding-top:1mm;" class="pn_l">We have online lessons and fun facts!</p>
-<p style="text-align: center;"><a href="https://courses.wavedm.net/index1.html"><button class="menuButtons">Let's check them out!</button></a></p>
+<p style="text-align: center;"><a href="https://courses.wavedm.net/mobileindex.html"><button class="menuButtons">Let's check them out!</button></a></p>
 <p style="padding:2mm;"></p>
 </div></div>
 <p style="margin: 25mm;"></p>
