--- a/ministry_indexCSE.html
+++ b/ministry_indexCSE.html
@@ -28,7 +28,7 @@
 <!--end-->
 <header>
 <div class="menuWDM">
-  <p class="pn_m_u" style="text-align: left;"><span><a href="./index1.html"><img src="./wave.PNG" width="60mm"></a></span>Wave Digital Ministries <span id="menuButtons"><a href="http://courses.wavedm.net/">Courses</a><a href="./about.html">About</a><a href="https://courses.wavedm.net/donate.html" target="_blank">Donate</a><a href="./ministry_indexCSE.html">Ministry Search</a></span></p>
+  <p class="pn_m_u" style="text-align: left;"><span><a href="./index1.html"><img src="./wave.PNG" width="60mm"></a></span>Wave Digital Ministries <span id="menuButtons"><a href="http://courses.wavedm.net/">Courses</a><a href="./about.html">About</a><a href="https://courses.wavedm.net/donate.html" target="_blank">Donate</a><a href="./ministryconnect.html" target="_blank">Ministry Connect</a></span></p>
 </div>
 <div style="padding-top: 10mm" class="menuWDM">
   <center>
