--- a/contact.html
+++ b/contact.html
@@ -27,12 +27,12 @@
 <link href="https://fonts.googleapis.com/css?family=Chilanka|La+Belle+Aurore|Literata|Oswald|Ubuntu&display=swap" rel="stylesheet">
 <!--end-->
 <header>
-<div class="menuWDM">
-  <p class="pn_m_u" style="text-align: left;"><span><a href="./index1.html"><img src="./wave.PNG" width="60mm"></a></span>Wave Digital Ministries <span id="menuButtons"><a href="http://courses.wavedm.net/">Courses</a><a href="./about.html">About</a><a href="https://courses.wavedm.net/donate.html" target="_blank">Donate</a><a href="./ministry_indexCSE.html">Ministry Search</a></span></p>
-</div>
+  <div class="menuWDM">
+    <p class="pn_m_u" style="text-align: left;"><span><a href="./index1.html"><img src="./wave.PNG" width="60mm"></a></span>Wave Digital Ministries <span id="menuButtons"><a href="http://courses.wavedm.net/">Courses</a><a href="./about.html">About</a><a href="https://courses.wavedm.net/donate.html" target="_blank">Donate</a><a href="./ministryconnect.html" target="_blank">Ministry Connect</a></span></p>
+  </div>
 <div style="padding-top: 10mm" class="menuWDM">
   <center>
-<p><span><!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a>--><a href="./account.html"><button class="menuButtons2">Community</button></a><!--<a href="#"><button class="menuButtons2">Partners</button></a>--><a href="https://wavedm.churchcenter.com/people/forms/76551" target="_blank"><button class="menuButtons2">Contact Us</button></a><a href="./subscribe.html" target="_blank"><button class="menuButtons2">Subscribe</button></a><a href="https://dev.wavedm.net/"><button class="menuButtons2">Developers</button></a><a href="./privacy.html" target="_blank"><button class="menuButtons2">Privacy</button></a></span></p>
+<p><span><!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a>--><a href="https://earth.wavedm.net/" target="_blank"><button class="menuButtons2">Cleaner Earth</button></a><a href="./account.html"><button class="menuButtons2">Community</button></a><!--<a href="#"><button class="menuButtons2">Partners</button></a>--><a href="https://wavedm.churchcenter.com/people/forms/76551" target="_blank"><button class="menuButtons2">Contact Us</button></a><a href="./subscribe.html" target="_blank"><button class="menuButtons2">Subscribe</button></a><a href="https://dev.wavedm.net/"><button class="menuButtons2">Developers</button></a><a href="./privacy.html" target="_blank"><button class="menuButtons2">Privacy</button></a></span></p>
   </center>
 </div>
 </header>
