--- a/index1.html
+++ b/index1.html
@@ -33,7 +33,7 @@
   </div>
 <div style="padding-top: 10mm" class="menuWDM">
   <center>
-<p><span><!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a>--><a href="https://earth.wavedm.net/" target="_blank"><button class="menuButtons2">Cleaner Earth</button></a><a href="./account.html"><button class="menuButtons2">Community</button></a><!--<a href="#"><button class="menuButtons2">Partners</button></a>--><a href="https://wavedm.churchcenter.com/people/forms/76551" target="_blank"><button class="menuButtons2">Contact Us</button></a><a href="./subscribe.html" target="_blank"><button class="menuButtons2">Subscribe</button></a><a href="https://dev.wavedm.net/"><button class="menuButtons2">Developers</button></a><a href="./privacy.html" target="_blank"><button class="menuButtons2">Privacy</button></a></span></p>
+<p><span><!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a>--><a href="https://earth.wavedm.net/" target="_blank"><button class="menuButtons2">Earth</button></a><a href="./account.html"><button class="menuButtons2">Community</button></a><!--<a href="#"><button class="menuButtons2">Partners</button></a>--><a href="https://wavedm.churchcenter.com/people/forms/76551" target="_blank"><button class="menuButtons2">Contact Us</button></a><a href="./subscribe.html" target="_blank"><button class="menuButtons2">Subscribe</button></a><a href="https://dev.wavedm.net/"><button class="menuButtons2">Developers</button></a><a href="./privacy.html" target="_blank"><button class="menuButtons2">Privacy</button></a></span></p>
   </center>
 </div>
 </header>
@@ -58,7 +58,7 @@
 <div class="conEarth">
   <p style="padding:55mm;"></p>
   <div style="background-color: #D2DADD;">
-<p style="text-align: center; padding-top:1mm;" class="pn_l">WDM | Cleaner Earth</p>
+<p style="text-align: center; padding-top:1mm;" class="pn_l">WDM | Earth</p>
 <p style="text-align: center; padding-top:1mm;" class="pn_l">Our initiative to be good stewards of God's Creation.</p>
 <p style="text-align: center;"><a href="https://earth.wavedm.net/" target="_blank"><button class="menuButtons">Let's see it!</button></a></p>
 <div style=" margin-top: 5mm;">
