--- a/mobileindex.html
+++ b/mobileindex.html
@@ -56,7 +56,19 @@
 <p style="text-align: center;"><a href="./social.html" target="_blank"><button class="menuButtons">Take me to them!</button></a></p>
 <p style="padding:2mm;"></p>
 </div></div>
+<p style="margin: 25mm;"></p>
 
+<div class="conEarth">
+  <p style="padding:25mm;"></p>
+  <div style="background-color: #D2DADD;">
+<p style="text-align: center; padding-top:1mm;" class="pn_l">WDM | Earth</p>
+<p style="text-align: center; padding-top:1mm;" class="pn_l">Our initiative to be good stewards of God's Creation.</p>
+<p style="text-align: center;"><a href="https://earth.wavedm.net/" target="_blank"><button class="menuButtons">Let's see it!</button></a></p>
+<div style=" margin-top: 5mm;">
+  <a href="https://www.instagram.com/earthwdm/" target="_blank"><img src="./icons/instagram.png" alt="instagram Button" width="70px"></a><a style="margin-left: 2mm;" href="https://twitter.com/EarthWdm" target="_blank"><img src="./icons/TwitterButton.png" alt="Twitter Button" width="70px"></a>
+</div>
+<p style="padding:2mm;"></p>
+</div></div>
 <p style="margin: 25mm;"></p>
 <div class="con14">
   <p style="padding:25mm;"></p>
@@ -78,7 +90,7 @@
 
 <footer>
 <center>
-    <!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a><a href="#"><button class="menuButtons2">Community</button></a>--><a href="https://earth.wavedm.net/" target="_blank"><button class="menuButtons2">Cleaner Earth</button></a><a href="https://wavedm.churchcenter.com/people/forms/76551" target="_blank"><button class="menuButtons2">Contact Us</button></a><a href="./mobileabout.html"><button class="menuButtons2">About</button></a><a href="./subscribe.html" target="_blank"><button class="menuButtons2">Subscribe</button></a><a href="./privacy.html"><button class="menuButtons2">Privacy</button></a>
+    <!--<a href="#"><button class="menuButtons2">Ministry Tools</button></a><a href="#"><button class="menuButtons2">Community</button></a>--><a href="https://earth.wavedm.net/" target="_blank"><button class="menuButtons2">Earth</button></a><a href="https://wavedm.churchcenter.com/people/forms/76551" target="_blank"><button class="menuButtons2">Contact Us</button></a><a href="./mobileabout.html"><button class="menuButtons2">About</button></a><a href="./subscribe.html" target="_blank"><button class="menuButtons2">Subscribe</button></a><a href="./privacy.html"><button class="menuButtons2">Privacy</button></a>
 
     <div style=" margin-top: 5mm;">
       <a style="margin-right: 2mm;" href="https://faithlife.com/wave-digital-ministries-network/" target="_blank"><img src="./icons/FaithLife.png" alt="FaithLife Button" width="70px"></a><a href="https://www.instagram.com/wavedigitalministries/" target="_blank"><img src="./icons/instagram.png" alt="instagram Button" width="70px"></a><a style="margin-left: 2mm;" href="https://twitter.com/ministries_wave" target="_blank"><img src="./icons/TwitterButton.png" alt="Twitter Button" width="70px"></a>
