--- a/mobileindex.html
+++ b/mobileindex.html
@@ -63,7 +63,7 @@
   <div style="background-color: #D2DADD;">
 <p style="text-align: center; padding-top:1mm;" class="pn_l">WDM | Earth</p>
 <p style="text-align: center; padding-top:1mm;" class="pn_l">Our initiative to be good stewards of God's Creation.</p>
-<p style="text-align: center;"><a href="https://earth.wavedm.net/" target="_blank"><button class="menuButtons">Let's see it!</button></a></p>
+<p style="text-align: center;"><a href="https://earth.wavedm.net/"><button class="menuButtons">Let's see it!</button></a></p>
 <div style=" margin-top: 5mm;">
   <a href="https://www.instagram.com/earthwdm/" target="_blank"><img src="./icons/instagram.png" alt="instagram Button" width="70px"></a><a style="margin-left: 2mm;" href="https://twitter.com/EarthWdm" target="_blank"><img src="./icons/TwitterButton.png" alt="Twitter Button" width="70px"></a>
 </div>
