--- a/social.html
+++ b/social.html
@@ -52,7 +52,7 @@
     <div class="con10">
       <p style="padding:0mm;"></p>
       <div style="background-color: #D2DADD; ">
-        <iframe style="margin: 5mm;" width="95%" height="600mm" src="https://www.youtube-nocookie.com/embed/h-i9YI7y9mQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe style="margin: 5mm;" width="95%" height="600mm" src="https://www.youtube.com/embed/ssk30WdAH-4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div></div>
 </center>
 </div>
