--- a/privacy.html
+++ b/privacy.html
@@ -46,7 +46,7 @@
   <div class="con11">
     <p style="padding:0mm;"></p>
     <div style="background-color: #D2DADD;">
-  <p style="text-align: center; padding-top:1mm;" class="pn_m">This website uses trackers and cookies. These are for analytical purposes. *Wave Digital Ministries does not share this data. We use Wix for member management. We also use Church Metrics for analytic visualization. We use Planning Center People for CRM and forms. We keep all data private. </p>
+  <p style="text-align: center; padding-top:1mm;" class="pn_m">This website uses Google Analytics for analytics. *Wave Digital Ministries does not sell or share this data. We use Wix for member management. We use Planning Center People for CRM and forms. We keep all data private.</p>
   <p style="padding:2mm;"></p>
   </div></div>
   <p style="padding:8mm;"></p>
@@ -54,7 +54,7 @@
   <div class="con11">
     <p style="padding:0mm;"></p>
     <div style="background-color: #D2DADD;">
-  <p style="text-align: center; padding-top:1mm;" class="pn_m">We prohibit the use of profane language, adult content, bullying, and using God's name as a curse word. Account holders must be atleast 17 years of age or older.</p>
+  <p style="text-align: center; padding-top:1mm;" class="pn_m">We prohibit the use of profane language, adult content, bullying, and using God's name as a curse word. Account holders must be atleast 18 years of age or older.</p>
   <p style="text-align: center; padding-top:1mm;" class="pn_m">Images that contain children are NOT permitted. This is to protect their identities.</p>
   <p style="padding:2mm;"></p>
   <p style="text-align: center; padding-top:1mm;" class="pn_l">Violation of any of these terms or laws will result in termination of your account.</p>
