--- a/social.html
+++ b/social.html
@@ -39,13 +39,13 @@
 -->
 <div class="menuWDM" style="background-color: #D2DADD;position: fixed;top: 0mm;left: 0mm;width: 100%;padding: 3mm;box-shadow: 0mm 0mm 4mm #1a1a1a;height: 20mm;overflow-y: hidden;">
   <center><a href="./mobileindex.html"><img src="./wave.PNG" width="70mm"></a></center>
-</div>
+</div><!--https://t.me/wdmnetchannel-->
 <body>
   <p style="text-align: center; color: #cecece;" class="pn_l">Connect with us!</p>
   <div>
   <center>
     <div style=" margin-top: 5mm;">
-      <a style="margin-right: 2mm;" href="https://www.youtube.com/channel/UC0VXbM4cGzj9JlUjdxCmIHg?view_as=subscriber" target="_blank"><img src="./icons/youtube.png" alt="Youtube Button" width="70px"></a><a style="margin-right: 2mm;" href="https://www.facebook.com/Wave-Digital-Ministries-Network-102990284411843/?modal=admin_todo_tour" target="_blank"><img src="./icons/Facebook.png" alt="Facebook Button" width="70px"></a><a style="margin-right: 2mm;" href="https://faithlife.com/wave-digital-ministries-network/" target="_blank"><img style="border: none; border-radius: 1mm;" src="./icons/FaithLife.png" alt="FaithLife Button" width="70px"></a><a href="https://www.instagram.com/wavedigitalministries/" target="_blank"><img src="./icons/instagram.png" alt="instagram Button" width="70px"></a><a style="margin-left: 2mm;" href="https://twitter.com/ministries_wave" target="_blank"><img src="./icons/TwitterButton.png" alt="Twitter Button" width="70px"></a>
+      <a style="margin-right: 2mm;" href="https://t.me/wdmnetchannel" target="_blank"><img src="./icons/telegramicon.png" alt="Youtube Button" width="70px"></a><a style="margin-right: 2mm;" href="https://www.youtube.com/channel/UC0VXbM4cGzj9JlUjdxCmIHg?view_as=subscriber" target="_blank"><img src="./icons/youtube.png" alt="Youtube Button" width="70px"></a><a style="margin-right: 2mm;" href="https://www.facebook.com/Wave-Digital-Ministries-Network-102990284411843/?modal=admin_todo_tour" target="_blank"><img src="./icons/Facebook.png" alt="Facebook Button" width="70px"></a><a style="margin-right: 2mm;" href="https://faithlife.com/wave-digital-ministries-network/" target="_blank"><img style="border: none; border-radius: 1mm;" src="./icons/FaithLife.png" alt="FaithLife Button" width="70px"></a><a href="https://www.instagram.com/wavedigitalministries/" target="_blank"><img src="./icons/instagram.png" alt="instagram Button" width="70px"></a><a style="margin-left: 2mm;" href="https://twitter.com/ministries_wave" target="_blank"><img src="./icons/TwitterButton.png" alt="Twitter Button" width="70px"></a>
       <p><img style="margin-left: 2mm; border: none; border-radius: 1mm;" src="./icons/tikcode.JPG" alt="TikCode" width="130px"></p>
     </div>
 
