--- a/privacy.html
+++ b/privacy.html
@@ -6,16 +6,6 @@
 <html lang="en">
 <link rel="shortcut icon" href="./wave.PNG">
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146475495-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-146475495-3');
-</script>
-
 <link rel="preload" href="./main.css" as="style">
 <link rel="stylesheet" href="./main.css">
 
@@ -46,7 +36,7 @@
   <div class="con11">
     <p style="padding:0mm;"></p>
     <div style="background-color: #D2DADD;">
-  <p style="text-align: center; padding-top:1mm;" class="pn_m">This website uses Google Analytics for analytics. *Wave Digital Ministries does not sell or share this data. We use Wix for member management. We use Planning Center People for CRM and forms. We keep all data private.</p>
+  <p style="text-align: center; padding-top:1mm;" class="pn_m">We use Wix for member management. We use Planning Center People for CRM and forms. We keep all data private. We never sell your data.</p>
   <p style="padding:2mm;"></p>
   </div></div>
   <p style="padding:8mm;"></p>
