--- a/index.html
+++ b/index.html
@@ -179,6 +179,14 @@
     </div>
 </section>
 
+<div id="custom-html-16"><!-- Type valid HTML here -->
+
+<div>
+    <center>
+<img src="https://api.thegreenwebfoundation.org/greencheckimage/www.wavedm.net" alt="This website is hosted Green - checked by thegreenwebfoundation.org">
+    </center>
+</div></div>
+
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
