--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 
                 <p class="mbr-text mbr-light pb-3 align-left mbr-fonts-style display-7">
                     Find the right ministry for you.</p>
-                <div class="align-left mbr-section-btn"><a class="btn btn-md btn-warning display-4" href="https://courses.wavedm.net/">Learn More</a></div>
+                <div class="align-left mbr-section-btn"><a class="btn btn-md btn-warning display-4" href="ministryconnect.html">Learn More</a></div>
             </div>
         </div>
     </div>
