--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <h1 class="mbr-section-title mbr-regular pb-3 align-left mbr-fonts-style display-1">We are merging ministry &amp; technology.</h1>
                 
                 
-                <div class="align-left mbr-section-btn"><a class="btn btn-md btn-danger display-4" href="https://share.hsforms.com/1C-bYH1P4SXu1KbDp3XH1xg3s5d8" target="_blank">CONTACT US</a></div>
+                <div class="align-left mbr-section-btn"><a class="btn btn-md btn-danger display-4" href="https://wavedm.churchcenter.com/people/forms/76551" target="_blank">CONTACT US</a></div>
             </div>
         </div>
     </div>
