Updated the about and 404 pages

--- a/404.html
+++ b/404.html
@@ -158,7 +158,7 @@
                     <h2 class="mb-4 mbr-fonts-style mbr-section-title display-5">REPORT A BROKEN LINK</h2>
                     
                     
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-primary btn-bgr display-4" href="https://share.hsforms.com/1C-bYH1P4SXu1KbDp3XH1xg3s5d8" target="_blank">BUG REPORT FORM</a></div>
+                    <div class="mbr-section-btn"><a class="btn btn-md btn-primary btn-bgr display-4" href="https://share.hsforms.com/1C-bYH1P4SXu1KbDp3XH1xg3s5d8" target="_blank">BUG REPORT FORM</a> <a class="btn btn-md btn-primary btn-bgr display-4" href="https://wavedm.freshstatus.io/" target="_blank">View Status Page</a></div>
                 </div>
             </div>
         </div>
