--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     
 </section>
 
-<section class="cid-rUtJuYdUaR" id="social-buttons01-r">
+<section class="cid-rVACDlvKy4" id="social-buttons01-1r">
 
     
 
@@ -235,14 +235,6 @@
         </div>
     </div>
 </section>
-
-<div id="custom-html-16"><!-- Type valid HTML here -->
-
-<div>
-    <center>
-<img src="https://api.thegreenwebfoundation.org/greencheckimage/www.wavedm.net" alt="This website is hosted Green - checked by thegreenwebfoundation.org">
-    </center>
-</div></div>
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
