--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
   
   
   
-
 <meta name="theme-color" content="#ab9776">
 <link rel="manifest" href="manifest.json">
 <script src="sw-connect.js"></script>
@@ -36,8 +35,9 @@
 <link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1668x2224.png">
 <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-2048x2732.png">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
-<meta name="apple-mobile-web-app-title" content="">
-<link rel="apple-touch-icon" href="apple-touch-icon.png"></head>
+<meta name="apple-mobile-web-app-title" content="Wave Digital Ministries">
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
+</head>
 <body>
   <section class="extMenu12 menu popup-btn-cards cid-rUtEBVOxs5" once="menu" id="extMenu13-n">
 
@@ -254,14 +254,6 @@
         </div>
     </div>
 </section>
-
-<div id="custom-html-1y"><!-- Type valid HTML here -->
-
-<div>
-<center>
-    <img style="width: 50mm;" src="https://www.wavedm.net/assets/images/wave-1242x1000.png" alt="Wave Digital Ministries Network"><img style="width: 70mm;" src="https://api.thegreenwebfoundation.org/greencheckimage/www.wavedm.net" alt="This website is hosted Green - checked by thegreenwebfoundation.org">
-    </center>
-</div></div>
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
