--- a/index.html
+++ b/index.html
@@ -258,6 +258,8 @@
         </div>
     </div>
     <center><a href="https://twitter.com/intent/tweet?button_hashtag=beawave4christ&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #beawave4christ</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></center>
+    
+    <center><a href="https://wavedm.churchcenter.com/people/forms/76556" target="_BLANK"><h3>Signup</h3></a></center>
 </section>
 
 
