--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
   
   
   
-
 <meta name="theme-color" content="#ab9776">
 <link rel="manifest" href="manifest.json">
 <script src="sw-connect.js"></script>
@@ -41,7 +40,8 @@
 <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-2048x2732.png">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
 <meta name="apple-mobile-web-app-title" content="Wave Digital Ministries">
-<link rel="apple-touch-icon" href="apple-touch-icon.png"></head>
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
+</head>
 <body>
   <section class="extMenu12 menu popup-btn-cards cid-rUtEBVOxs5" once="menu" id="extMenu13-n">
 
@@ -258,8 +258,8 @@
         </div>
     </div>
     <center><a href="https://twitter.com/intent/tweet?button_hashtag=beawave4christ&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #beawave4christ</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></center>
-    
-    <center><a href="https://wavedm.churchcenter.com/people/forms/76556" target="_BLANK"><h3>Signup</h3></a></center>
+    <div style="padding: 3mm;"></div>
+    <center><iframe src="https://open.spotify.com/embed/playlist/2fdhT85V4llbiYqeoxvFZT" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></center>
 </section>
 
 
