--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
   
   
   
+
 <meta name="theme-color" content="#ab9776">
 <link rel="manifest" href="manifest.json">
 <script src="sw-connect.js"></script>
@@ -37,8 +38,7 @@
 <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-2048x2732.png">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
 <meta name="apple-mobile-web-app-title" content="Wave Digital Ministries">
-<link rel="apple-touch-icon" href="apple-touch-icon.png">
-</head>
+<link rel="apple-touch-icon" href="apple-touch-icon.png"></head>
 <body>
   <section class="extMenu12 menu popup-btn-cards cid-rUtEBVOxs5" once="menu" id="extMenu13-n">
 
@@ -493,8 +493,8 @@
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://www.facebook.com/wavedm.net/?modal=admin_todo_tour" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon" style="color: rgb(87, 70, 139); fill: rgb(87, 70, 139);"></span>
+                        <a href="https://open.spotify.com/user/ci5p263d5zka838jbvwhhce3d" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-spotify socicon" style="color: rgb(87, 70, 139); fill: rgb(87, 70, 139);"></span>
                         </a>
                     </div>
                     <div class="soc-item">
