updated ministry connect

--- a/ministryconnect.html
+++ b/ministryconnect.html
@@ -212,7 +212,7 @@
                 <div class="mbr-text align-center mbr-white pb-2">
                     
                 </div>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-danger display-4" href="https://www.wavedm.net/archive/mobilesearch.html" target="_blank">START SEARCHING NOW!</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-danger display-4" href="https://www.wavedm.net/archive/mobilesearch.html" target="_blank">START SEARCHING</a> <a class="btn btn-md btn-danger display-4" href="https://wavedm.churchcenter.com/people/forms/119219" target="_blank">SUBMIT A WEBSITE</a></div>
                 <div class="pt-5 align-center">
                     <img src="assets/images/moderntech-1472x981.jpg" alt="Mobirise" title="" style="width: 80%;">
                 </div>
