--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <rect x="13" y="8" width="8" height="12" rx="1"></rect>
   <path d="M18 8v-3a1 1 0 0 0 -1 -1h-13a1 1 0 0 0 -1 1v12a1 1 0 0 0 1 1h9"></path>
   <line x1="16" y1="9" x2="18" y2="9"></line>
-</svg>152,363</h1><p style="color: #fff;">Views</p></div><div class="col-md-4"><h1 style="color: #fff;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-map-2">
+</svg>152,497</h1><p style="color: #fff;">Views</p></div><div class="col-md-4"><h1 style="color: #fff;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-map-2">
   <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
   <line x1="18" y1="6" x2="18" y2="6.01"></line>
   <path d="M18 13l-3.5 -5a4 4 0 1 1 7 0l-3.5 5"></path>
@@ -41,13 +41,13 @@
   <circle cx="18" cy="18" r="3"></circle>
   <line x1="8.7" y1="10.7" x2="15.3" y2="7.3"></line>
   <line x1="8.7" y1="13.3" x2="15.3" y2="16.7"></line>
-</svg><h3 class="name">Ministry Connect </h3><p class="description">Ministry Connect is simple to use for ministries and individuals! Our goal is to use Ministry Connect to link people with local ministries and churches.</p><a class="learn-more" href="#">Learn more »</a></div></div><div class="col-sm-6 col-md-5 col-lg-4 item"><div class="box"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-device-gamepad icon" style="color: #63868E;">
+</svg><h3 class="name">Ministry Connect </h3><p class="description">Ministry Connect is simple to use for ministries and individuals! Our goal is to use Ministry Connect to link people with local ministries and churches.</p><a class="learn-more" href="https://partners.wavedm.net" target="_blank">Learn more »</a></div></div><div class="col-sm-6 col-md-5 col-lg-4 item"><div class="box"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-device-gamepad icon" style="color: #63868E;">
   <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
   <rect x="2" y="6" width="20" height="12" rx="2"></rect>
   <path d="M6 12h4m-2 -2v4"></path>
   <line x1="15" y1="11" x2="15" y2="11.01"></line>
   <line x1="18" y1="13" x2="18" y2="13.01"></line>
-</svg><h3 class="name">GX</h3><p class="description">WDM | GX is a project to share God's love with video games both while guiding people towards the best games for sharing God's love while respecting Him.</p><a class="learn-more" href="#">Learn more »</a></div></div><div class="col-sm-6 col-md-5 col-lg-4 item"><div class="box"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-photo icon" style="color: #63868E;">
+</svg><h3 class="name">GX</h3><p class="description">WDM | GX is a project to share God's love with video games both while guiding people towards the best games for sharing God's love while respecting Him.</p><a class="learn-more" href="https://games.wavedm.net" target="_blank">Learn more »</a></div></div><div class="col-sm-6 col-md-5 col-lg-4 item"><div class="box"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-photo icon" style="color: #63868E;">
   <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
   <line x1="15" y1="8" x2="15.01" y2="8"></line>
   <rect x="4" y="4" width="16" height="16" rx="3"></rect>
