--- a/ministrytools.html
+++ b/ministrytools.html
@@ -56,8 +56,8 @@
             </div>
             <div class="col-md-6 d-md-flex align-items-md-center">
                 <div style="max-width: 350px;">
-                    <h2 class="text-uppercase fw-bold">MinistryConnect</h2>
-                    <p class="my-3">Lets connect you with the ministry that best suits you!</p>
+                    <h2 class="text-uppercase fw-bold">MinistryTools</h2><sub>Beta</sub>
+                    <p class="my-3">Great tools for great ministries!</p>
                 </div>
             </div>
         </div>
@@ -71,25 +71,7 @@
     </a>
     </li>
 
-    <li><a rel="noreferrer nofollow external" target="_blank" href="https://www.citychurch-ag.com/">
-        <p class="h3">City Church - Lancaster CA</p> <p style="visibility: visible;" class="h6">Our purpose at City Church is… “To Love God and Make a Difference.” We filter every idea, program and budget request through our purpose statement. If what we plan doesn’t help us meet our purpose, then we don’t do it. Our statement of purpose is built on two teachings of Jesus.</p>
-        </a>
-        </li>
 
-        <li><a rel="noreferrer nofollow external" target="_blank" href="https://cmc.wavedm.net/">
-            <p class="h3">Christian Meme Channel</p> <p style="visibility: visible;" class="h6">The Christian Meme Channel is one of Wave Digital Ministries most successful outreach projects. The Christian Meme Channel is using comedy as a way to connect with people and be a light for Christ.</p>
-            </a>
-            </li>
-
-            <li><a rel="noreferrer nofollow external" target="_blank" href="https://courses.wavedm.net/">
-                <p class="h3">WDM | Courses</p> <p style="visibility: visible;" class="h6">WDM Courses is a Biblical and ministry education and knowledge platform for everyone.</p>
-                </a>
-                </li>
-
-                <li><a rel="noreferrer nofollow external" target="_blank" href="https://act.wavedm.net/">
-                    <p class="h3">WDM | Act</p> <p style="visibility: visible;" class="h6">WDM Act is a ministry project to bring positive change to our nation by presenting a Biblical perspective on current issues we are facing.</p>
-                    </a>
-                    </li>
 </ul>
 </div>
 
