--- a/impact.html
+++ b/impact.html
@@ -21,8 +21,8 @@
     <link rel="icon" type="image/jpeg" sizes="512x512" href="assets/img/splashscreen.jpg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 <!-- Panelbear -->
 <script async src="https://cdn.panelbear.com/analytics.js?site=DS5Jkk6cTdB"></script>
 <script>
@@ -39,7 +39,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">Projects&nbsp;</a>
-                        <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="https://partners.wavedm.net/ministryconnect" target="_blank">MinistryConnect</a><a class="dropdown-item" href="https://scholar.wavedm.net" target="_blank">Scholar</a><a class="dropdown-item" href="https://cmc.wavedm.net" target="_blank">CMC</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a></div>
+                        <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://scholar.wavedm.net" target="_blank">Scholar</a><a class="dropdown-item" href="https://cmc.wavedm.net" target="_blank">CMC</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a></div>
                     </li>
                     <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#">More&nbsp;</a>
                         <div class="dropdown-menu dropdown-menu-end"><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://partners.wavedm.net" target="_blank">Partners</a><a class="dropdown-item" href="https://wavedm.churchcenter.com/people/forms/76551" target="_blank">Contact</a><a class="dropdown-item" href="privacy.html">Privacy</a></div>
